# letterboxd-scraper

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.dev.yml  letterboxd-terms.md  letterboxd_ratings_scraper.py  package-lock.json  pyproject.toml  schema.sql  tmdb-terms.md
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 202407111200_add_cohort_task_stage.py
apps/: __init__.py
apps/api/: __init__.py  auth.py  dependencies.py  main.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
config/: default.toml
db/: schema.sql
db/migrations/: 001_initial.sql  002_tmdb_enrichment.sql  003_letterboxd_film_id.sql  004_histogram_stats.sql  005_likes_only.sql  006_cohort_affinity.sql  006_rename_rss_timestamp.sql  007_distribution_hist.sql  007_job_runs.sql  007_scrape_progress.sql  008_tmdb_media_type.sql  009_cohort_task.sql  010_api_keys.sql  (+1 more)
docs/: architecture_plan.md  data_products.md  demo_launch_plan.md  dev_session_notes.md  distribution-buckets.md  fixing sync 2f25f41d4c9380629f68e5274e6ceb53.md  migrations.md  phase2_automation.md  phase3_product_layer_plan.md  product_roadmap.md  ranking_architecture.md  workflow.md
scripts/: inspect_distribution.py
tests/: test_enrichment.py  test_film_page_scraper.py  test_follow_graph.py  test_histogram_scraper.py  test_histogram_service.py  test_listings_scraper.py  test_rankings_affinity.py  test_ratings_scraper.py  test_ratings_service.py  test_rss_scraper.py  test_tmdb_client.py
(+102 files in other folders)
