[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letterboxd-ratings-scraper"
version = "0.1.0"
description = "Personalized Letterboxd cohort scraper with incremental updates and ranking CLI."
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "tomli>=2.0; python_version < \"3.11\"",
    "celery>=5.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "ruff",
]

[project.scripts]
letterboxd-scraper = "letterboxd_scraper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
